--- a/style.css
+++ b/style.css
@@ -2,14 +2,40 @@ body {
     color: rgba(0, 0, 0, .7)
 }
 
+.nav {
+    margin: 0 15px 10px;
+}
+
+.nav img, .nav p {
+    display: inline-block;
+}
+
+.nav p {
+    float: right;
+    font-family: Arial;
+    font-size: 13px;
+}
+
+.nav a {
+    color: #4ead77;
+    text-decoration: none;
+    font-weight: lighter;
+    letter-spacing: 0.05em;
+}
+
 #tj {
-    width: 48%;
+    width: 336px;
+    height: 98px;
 }
 
 .wrapper {
     max-width: 700px;
     margin: 0 auto;
 }
+
+/***********************************
+BASE STYLES
+***********************************/
 
 h1, h2, h3 {
     color: black;
@@ -42,7 +68,8 @@ p {
     font-size: 20px;
     line-height: 1.65;
     letter-spacing: -.003em;
-    padding: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 .divider {
@@ -60,7 +87,7 @@ a {
     font-weight: 400;
 }
 
-img {
+.wrapper img {
     text-align: center;
     width: 100%;
     margin: 10px auto;
@@ -72,4 +99,18 @@ img {
     color: rgba(0, 0, 0, .5);
     text-align: center;
     margin: 10px auto 30px;
+}
+
+@media (max-width: 760px) {
+    .wrapper {
+        padding: 10px;
+    }
+
+    p {
+        font-size: 18px;
+    }
+
+    h1 {
+        font-size: 28px;
+    }
 }
